--- a/bsconfig.json
+++ b/bsconfig.json
@@ -2,8 +2,8 @@
   "name": "onetimeurl",
   "version": "0.1.0",
   "sources": {
-      "dir": "src",
-      "subdirs" : true
+    "dir": "src",
+    "subdirs": true
   },
   "package-specs": {
     "module": "commonjs",
@@ -11,5 +11,7 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
-   ]
+    "bs-express"
+  ],
+  "refmt": 3
 }
