--- a/bsconfig.json
+++ b/bsconfig.json
@@ -11,7 +11,9 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
-    "bs-express"
+    "bs-express",
+    "bs-graphql",
+    "bs-apollo-server-express"
   ],
   "refmt": 3
 }
