--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "bs-platform": "^2.2.2"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.2",
+    "body-parser": "^1.18.2",
+    "bs-apollo-server-express": "^0.3.1",
     "bs-express": "^0.4.1",
-    "express": "^4.16.2"
+    "bs-graphql": "^0.3.1",
+    "express": "^4.16.2",
+    "graphql": "^0.13.1"
   }
 }
