--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,9 @@
 {
   "name": "onetimeurl",
   "version": "0.1.0",
+  "reason": {
+    "react-jsx": 2
+  },
   "sources": {
     "dir": "src",
     "subdirs": true
@@ -10,10 +13,14 @@
     "in-source": true
   },
   "suffix": ".bs.js",
+  "warnings": {
+    "number": "-3"
+  },
   "bs-dependencies": [
     "bs-express",
     "bs-graphql",
-    "bs-apollo-server-express"
+    "bs-apollo-server-express",
+    "reason-react"
   ],
   "refmt": 3
 }
