--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "scripts": {
     "clean": "bsb -clean-world",
-    "build": "bsb -make-world",
+    "build": "yarn build:server && yarn build:client",
+    "build:server": "bsb -make-world",
+    "build:client": "parcel build src/client.bs.js -d public/",
     "watch": "bsb -make-world -w",
-    "start": "yarn build && node ./src/app.bs.js"
+    "start": "yarn build && node ./src/server.bs.js"
   },
   "keywords": [
     "BuckleScript"
@@ -13,7 +15,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "^2.2.2"
+    "@playlyfe/gql": "^2.6.0",
+    "bs-platform": "^2.2.2",
+    "parcel-bundler": "^1.6.2"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
@@ -22,6 +26,8 @@
     "bs-express": "^0.4.1",
     "bs-graphql": "^0.3.1",
     "express": "^4.16.2",
-    "graphql": "^0.13.1"
+    "graphql": "^0.13.1",
+    "reason-react": "^0.3.4",
+    "serve-static": "^1.13.2"
   }
 }
