--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^4.16.2",
     "graphql": "^0.13.1",
     "reason-react": "^0.3.4",
-    "serve-static": "^1.13.2"
+    "serve-static": "^1.13.2",
+    "serverless": "^1.26.1",
+    "serverless-offline": "^3.18.0"
   }
 }
