--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "yarn build:server && yarn build:client",
     "build:server": "bsb -make-world",
     "build:client": "parcel build src/client.bs.js -d public/ -o bundle.js",
+    "build:container": "docker-compose build",
     "watch": "bsb -make-world -w",
-    "start": "yarn build && node ./src/server.bs.js"
+    "start": "yarn build && docker-compose up"
   },
   "keywords": [
     "BuckleScript"
@@ -29,8 +30,6 @@
     "graphql": "^0.13.1",
     "pg": "^7.4.1",
     "reason-react": "^0.3.4",
-    "serve-static": "^1.13.2",
-    "serverless": "^1.26.1",
-    "serverless-offline": "^3.18.0"
+    "serve-static": "^1.13.2"
   }
 }
