--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,4 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - './init.sql:/docker-entrypoint-init.d/init.sql'
+      - './init.sql:/docker-entrypoint-initdb.d/init.sql'
