--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - db
     volumes:
       - '.:/app/'
-  data:
+  cache:
     image: busybox
     volumes:
       - /app/node_modules
