--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "parcel-bundler": "^1.6.2"
   },
   "dependencies": {
+    "@types/pg": "^7.4.5",
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "bs-apollo-server-express": "^0.3.1",
     "bs-express": "^0.4.1",
     "bs-graphql": "^0.3.1",
     "bs-graphql-tools": "^0.3.1",
+    "bs-json": "^1.0.1",
     "express": "^4.16.2",
     "graphql": "^0.13.1",
     "graphql-tools": "^2.23.1",
