--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         io.kompose.service: app
     spec:
       containers:
-      - image: gcr.io/onetimeurl-198513/app:v1
+      - image: simple:v3
         name: app
         ports:
         - containerPort: 3000
