--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@playlyfe/gql": "^2.6.0",
-    "bs-platform": "^2.2.3",
+    "bs-platform": "2.2.2",
     "parcel-bundler": "^1.6.2"
   },
   "dependencies": {
