--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,38 @@
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    io.kompose.service: app
+  name: app
+spec:
+  ports:
+  - name: "3000"
+    port: 3000
+    targetPort: 3000
+  selector:
+    io.kompose.service: app
+status:
+  loadBalancer: {}
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  creationTimestamp: null
+  labels:
+    io.kompose.service: app-claim0
+  name: app-claim0
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
+status: {}
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.6.0 (e4adfef)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: app
   name: app
 spec:
   replicas: 1
@@ -19,7 +45,7 @@ spec:
         io.kompose.service: app
     spec:
       containers:
-      - image: simple:v3
+      - image: gcr.io/onetimeurl-198513/simple:v1
         name: app
         ports:
         - containerPort: 3000
