--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: 'simple:v3'
+    image: 'gcr.io/${PROJECT_ID}/simple:v1'
     build: .
     ports:
       - '3000:3000'
