--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,7 @@ spec:
     targetPort: 3000
   selector:
     io.kompose.service: app
+  type: LoadBalancer
 status:
   loadBalancer: {}
 
@@ -45,14 +46,14 @@ spec:
         io.kompose.service: app
     spec:
       containers:
-      - image: gcr.io/onetimeurl-198513/simple:v1
+      - image: gcr.io/onetimeurl-198513/app:v1
         name: app
         ports:
         - containerPort: 3000
         resources: {}
-        volumeMounts:
-        - mountPath: /app/
-          name: app-claim0
+        # volumeMounts:
+        # - mountPath: /app/
+        #   name: app-claim0
       restartPolicy: Always
       volumes:
       - name: app-claim0
