--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build:client": "parcel build src/client.bs.js -d public/ -o bundle.js",
     "build:container": "docker-compose build",
     "watch": "bsb -make-world -w",
-    "psql": "docker-compose exec db psql",
-    "psql:login": "yarn psql onetimeurl -U postgres",
+    "db": "docker-compose exec db psql -U postgres -d onetimeurl",
     "start": "yarn build && docker-compose up"
   },
   "keywords": [
